Revert "prevented filtering controls from wrapping on small screen sizes"
This reverts commit 16d60be816b08e91eeae326d466363c27cf83236.

--- a/webroot/css/calendar_full.css
+++ b/webroot/css/calendar_full.css
@@ -15,19 +15,13 @@ body {
 	/* 	border: 1px solid red; */
 }
 
-.menuBar {
+#divMenu {
 	background-color: #e9e9e9;
 	width: 100%;
 	height: 24px;
 	float: none;
 	clear: both;
-	white-space: nowrap;
 	/* 	border: 1px solid red; */
-}
-
-.menuBarItem {
-	display: inline-block;
-    white-space: normal;
 }
 
 #menuShadow {
@@ -40,6 +34,7 @@ body {
 	box-shadow: 0 0 7px rgba(0, 0, 0, 0.3);
 	-webkit-box-shadow: 0 0 7px rgba(0, 0, 0, 0.3);
 	-moz-box-shadow: 0 0 7px rgba(0, 0, 0, 0.3);
+	/* 	border: 1px solid red; */
 }
 
 #menuShadowCover {
@@ -49,6 +44,7 @@ body {
 	background-color: #fff;
 	width: 100%;
 	height: 34px;
+	/* 	border: 1px solid red; */
 }
 
 #divLogoText {
@@ -116,14 +112,11 @@ body {
 	float: right;
 	font-family: Tahoma, Geneva, sans-serif;
 	font-size: 12px;
-	white-space: nowrap;
 }
 
 .subMenuSection {
 	float: left;
 	height: 24px;
-	display: inline-block;
-    white-space: normal;
 }
 
 .subMenuSeparator {
@@ -133,8 +126,7 @@ body {
 	padding-left: 10px;
 	margin-left: 10px;
 	border-left: 1px solid #666;
-	display:inline-block;
-    white-space: normal;
+	
 }
 
 #divSearch {
